package org.example.herencia_ejemplos.ejercicicio1_redes_sociales;

public class Basico extends Usuario{
    public Basico(String nombre, int edad, String nombreUsuario, int seguidores) {
        super(nombre, edad, nombreUsuario, seguidores);
    }

}
